# python-project-50

./: .gitignore  README.md  gendiff.py  pyproject.toml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/hexlet_code/: cli.py  gendiff.py  json_handler.py  main.py
